--- a/view/home.html
+++ b/view/home.html
@@ -37,6 +37,10 @@
       gap: 15px;
     }
 
+    .user-info a {
+      text-decoration: none;                    
+    }
+
     .username {
       color: black;
       font-weight: bold;
@@ -49,8 +53,12 @@
       color: white;
       border-radius: 6px;
       cursor: pointer;
+      font-size: 18px;
     }
 
+    .logout-btn:hover {
+      background-color: #ff7a7a;
+    }
 
     .gallery-block {
       margin: 40px 0;
@@ -112,13 +120,13 @@
 
     .btn {
       width: 48%;
-      padding: 8px 0;
+      padding: 8px 14px;
       background-color: #555;
       border: none;
       color: white;
       border-radius: 6px;
       cursor: pointer;
-      font-size: 14px;
+      font-size: 18px;
     }
 
     .btn:hover {
@@ -132,9 +140,10 @@
   <div class="header">
     <div class="site-title">MovieVerse</div>
 
-    <div class="user-info">
-      <div class="username">User123</div>
-      <button class="logout-btn">Logout</button>
+        <div class="user-info">
+          <a href="/my_bookings" class="btn">My Bookings</a>
+          <a href="/logout" class="logout-btn">Logout</a>
+        </div>
     </div>
   </div>
 
