Massive Progress, mainly event creation and deletion

--- a/view/home.html
+++ b/view/home.html
@@ -63,6 +63,7 @@
     .gallery-block {
       margin: 40px 0;
       padding-left: 20px;
+      padding-right: 20px;
     }
 
     .gallery-title {
@@ -119,6 +120,9 @@
     }
 
     .btn {
+      margin-left: 5px;
+      margin-right: 5px;
+      text-decoration: none;
       width: 48%;
       padding: 8px 14px;
       background-color: #555;
@@ -131,6 +135,25 @@
 
     .btn:hover {
       background-color: #777;
+    }
+
+    .delete-event-btn {
+      margin-left: 5px;
+      margin-right: 5px;
+      background-color: #cc0000;
+      color: white;
+      padding: 8px;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+    }
+
+    .delete-event-btn:hover {
+      background-color: #a30000;
+    }
+
+    .admin-only {
+        display: none;
     }
   </style>
 </head>
