--- a/view/reviews.html
+++ b/view/reviews.html
@@ -136,7 +136,7 @@
 
     </main>
 
-    <script src="/public/js/reviews.js"></script>
+    <script src="/js/reviews.js"></script>
 
 </body>
 </html>
