--- a/view/create_event.html
+++ b/view/create_event.html
@@ -92,7 +92,7 @@
         <h2>Event Preview</h2>
 
         <div class="event-preview">
-            <img id="previewImage" src="poster-placeholder.jpg" alt="Event Poster">
+            <img id="previewImage" src="/public/images/placeholder.png" alt="Event Poster">
             <div>
                 <h3 id="previewName">Event Name Preview</h3>
                 <p id="previewDescription">
